--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="user-photo photo"><img class="shadow"
-                                src="static/assets/img/photo.jpg"></div>
+                                src="static/assets/img/1寸照.jpg"></div>
                     </div>
                 </div>
             </div>
